force-app/main/default/objects/Rack__c/Rack__c.object-meta.xml
<CustomObject>
    <label>Rack</label>
    <nameField>
        <label>Rack</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Racks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>