force-app/main/default/objects/Rack__c/fields/Cubic_Volume_Utilization__c.field-meta.xml
<CustomField>
    <fullName>Cubic_Volume_Utilization__c</fullName>
    <inlineHelpText>Expressed in Cubic Inches</inlineHelpText>
    <label>Cubic Volume Utilization</label>
    <summarizedField>Rack_Level__c.Cubic_Volume_Utilization__c</summarizedField>
    <summaryForeignKey>Rack_Level__c.Rack__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>