force-app/main/default/objects/Rack__c/fields/Rack_Volume_Cubic_Feet__c.field-meta.xml
<CustomField>
    <fullName>Rack_Volume_Cubic_Feet__c</fullName>
    <formula>Total_Rack_Volume__c / 1728</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rack Volume Cubic Feet</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>