force-app/main/default/objects/Rack__c/fields/Total_Rack_Levels__c.field-meta.xml
<CustomField>
    <fullName>Total_Rack_Levels__c</fullName>
    <label>Total Rack Levels</label>
    <summaryForeignKey>Rack_Level__c.Rack__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>