force-app/main/default/objects/Rack__c/fields/Total_Rack_Volume__c.field-meta.xml
<CustomField>
    <fullName>Total_Rack_Volume__c</fullName>
    <inlineHelpText>Expressed in Cubic Inches</inlineHelpText>
    <label>Total Rack Volume</label>
    <summarizedField>Rack_Level__c.Rack_Level_Volume__c</summarizedField>
    <summaryForeignKey>Rack_Level__c.Rack__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>